ENH: Ensure Agenda Time column is not wrapped

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,3 +1,7 @@
 ---
 ---
 @import "minima";
+
+.event-agenda tr :nth-child(1) {
+    white-space: nowrap;
+}
